--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link rel="shortcut icon" href="./favicon.png" type="image/x-icon" />
     <title>Pablo Araujo Portfólio</title>
   </head>
   <body>
